--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wangeditor-plugin-var",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
